--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -12,13 +12,13 @@
 			<%= render 'home' %>
 
 		<% else %>
-
+			<% @param = params %>
 			<% @page_title = t('blacklight.search.title', :application_name => application_name) %>
 			<% extra_head_content << render_opensearch_response_metadata.html_safe %>
 
 	    <h2 class="hide-text top-content-title"><%= t('blacklight.search.search_results_header') %></h2>
 	    <%= render 'sort_and_per_page' %>
-			<%= render :partial => 'constraints' %>
+			<%= render :partial => 'constraints', :locals => {param: @param} %>
 			<h3 class="hide-text"><%= t('blacklight.search.search_results') %></h3>
 			<%= render_document_index %>
 			<%= render 'results_pagination' %>
