--- a/app/views/catalog/_constraints.html.erb
+++ b/app/views/catalog/_constraints.html.erb
@@ -5,10 +5,11 @@
 
 		<%#link_to t('blacklight.search.start_over'), url_for(:action=>'index'), :class => "catalog_startOverLink", :id=>"startOverLink" %>
 		<%#link_to "Advanced Search", advanced_path, :class => "pull-right hidden-phone" %>
-		<%= render_constraints(param) %>
 
-		<% if param['spellcheck.q'] != param['q'] %>
-			<span class="dams-search-instead"><em>Search instead for <%= link_to_query(param['spellcheck.q'])%></em></span>
+		<%= render_constraints(params) %>
+
+		<% if params['spellcheck.q'] != params['q'] %>
+			<span class="dams-search-instead"><em>Search instead for <%= link_to_query(params['spellcheck.q'])%></em></span>
 		<% end %>
 
 		<%= render :partial => 'did_you_mean' %>
