Changed handling of links in Collections view to always break to next line. DHH-254

--- a/app/assets/stylesheets/custom-collections.css.scss
+++ b/app/assets/stylesheets/custom-collections.css.scss
@@ -6,6 +6,7 @@
 .dams-collections dl{margin-top:0;}
 .dams-collections dt{font-size: 125%;line-height: 200%; color: #AD702B;}
 .dams-collections dd{text-align: justify;}
+.dams-collections a{word-break: break-all;}
 .dams-collections .input-append{text-align:center;display:block;}
 .dams-collections .input-append input[type=text]{width:70% !important;}
 .dams-collections .sidebar-button-list{margin:0;}
