--- a/app/views/dams_assembled_collections/edit.html.erb
+++ b/app/views/dams_assembled_collections/edit.html.erb
@@ -29,7 +29,7 @@
  
   <%= render :partial => 'shared/edit_fields/creator_edit_form' , :locals => {:object => @dams_assembled_collection, :object_type => "dams_assembled_collection", :f => f}%>
 
-  <%= render :partial => 'shared/edit_fields/relationship_edit_form' , :locals => {:object => @dams_assembled_collection, :object_type => "dams_assembled_collection"}%>
+  <%= render :partial => 'shared/edit_fields/relationship_edit_form' , :locals => {:object => @dams_assembled_collection, :object_type => "dams_assembled_collection", :f => f}%>
      
   <%= render :partial => 'shared/edit_fields/related_resource_edit_form' , :locals => {:object => @dams_assembled_collection, :object_type => "dams_assembled_collection", :f => f}%>
       
