--- a/app/views/dams_provenance_collection_parts/edit.html.erb
+++ b/app/views/dams_provenance_collection_parts/edit.html.erb
@@ -31,7 +31,7 @@
  
   <%= render :partial => 'shared/edit_fields/creator_edit_form' , :locals => {:object => @dams_provenance_collection_part, :object_type => "dams_provenance_collection_part", :f => f}%>
 
-  <%= render :partial => 'shared/edit_fields/relationship_edit_form' , :locals => {:object => @dams_provenance_collection_part, :object_type => "dams_provenance_collection_part"}%>
+  <%= render :partial => 'shared/edit_fields/relationship_edit_form' , :locals => {:object => @dams_provenance_collection_part, :object_type => "dams_provenance_collection_part", :f => f}%>
      
   <%= render :partial => 'shared/edit_fields/related_resource_edit_form' , :locals => {:object => @dams_provenance_collection_part, :object_type => "dams_provenance_collection_part", :f => f}%>
       
