--- a/app/views/shared/edit_fields/_relationship_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_relationship_edit_form.html.erb
@@ -1,12 +1,19 @@
 <h3>Relationship</h3>
-<%= select_tag "#{object_type}[relationshipRoleURI][]", options_for_select(@mads_authorities, :selected => @role_id), :prompt=>"Select Relationship Role" %>   
-<br>
+<%#= select_tag "#{object_type}[relationshipRoleURI][]", options_for_select(@mads_authorities, :selected => @role_id), :prompt=>"Select Relationship Role" %>   
 <%
   nameTypeArray = [["ConferenceName", "ConferenceName"],["CorporateName", "CorporateName"],["FamilyName", "FamilyName"],["Name", "Name"], ["PersonalName", "PersonalName"]]
 %>  
-<% if @name_type == "" %>
-	<%= select_tag "#{object_type}[relationshipNameType][]",  options_for_select(nameTypeArray, @name_type) , :prompt=>"Select Relationship Type" , :onChange=>"javascript: getSubjects('#{object_type}',this.value,'#relationshipName','relationshipNameURI','Name');"%>
-<% else %>
-	<%= text_field_tag "#{object_type}[relationshipNameType][]", @name_type, :readonly => true%>
-<% end %>
-<div id="relationshipName"><%= select_tag "#{object_type}[relationshipNameURI][]", options_for_select(@dams_names, :selected => @name_id), :prompt=>"Select Relationship Name" %></div>
+
+<% 
+  i = 0
+  @relationships.each do |rel|
+	tmp = JSON.parse(rel.to_json)
+%>
+	<%= render :partial => 'shared/edit_fields/relationship_edit_fields' , :locals => {:f => f, :object_type => object_type, :nameTypeArray => nameTypeArray, :selected_type => "#{tmp['name']}", :index => "#{i}", :selected_name => "#{tmp['nameId']}", :selected_role => "#{tmp['roleId']}"}%>       
+<% 
+	i = i+1
+  end 
+%>
+
+<p><%= link_to_add_edit_relationships "Add Relationship", f, "#{object_type}", nameTypeArray, "#{i}"%></p>
+
