--- a/app/views/get_data/get_name.html.erb
+++ b/app/views/get_data/get_name.html.erb
@@ -6,11 +6,11 @@
 		<b><%= @label%></b><br/>
 		<%= select_tag "#{@formType}[#{@fieldName}][]", options_for_select(@names, :selected => "#{Rails.configuration.id_namespace}#{@selectedValue}") , :prompt=>"Select #{@label}", :class=>"newClassName", :onChange=>"javascript: checkOption(this.className,false,'#{@label}');" %>	
 		<br/>
-		<%= select_tag "#{@formType}[relationshipRoleURI][]", options_for_select(@mads_authorities, :selected => "#{Rails.configuration.id_namespace}#{@selectedRole}") , :prompt=>"Select Role"%>
+		<%= select_tag "#{@formType}[relationshipRoleURI][]", options_for_select(@mads_authorities, :selected => "#{Rails.configuration.id_namespace}#{@selectedRole}") , :prompt=>"Select Role", :class=>"newClassNameRole", :onChange=>"javascript: checkOption(this.className,false,'role');"%>
 	<% else %>
 		<%= select_tag "#{@formType}[relationship_attributes][#{@fieldId}][#{@fieldName}_attributes][#{@fieldId}][id]", options_for_select(@names, :selected => "#{Rails.configuration.id_namespace}#{@selectedValue}") , :prompt=>"Select #{@label}", :onChange=>"javascript: checkOption(this.id,true,'#{@label}');" %>
 		<br/>
-		<%= select_tag "#{@formType}[relationship_attributes][#{@fieldId}][role_attributes][#{@fieldId}][id]", options_for_select(@mads_authorities) , :prompt=>"Select Role"%>
+		<%= select_tag "#{@formType}[relationship_attributes][#{@fieldId}][role_attributes][#{@fieldId}][id]", options_for_select(@mads_authorities) , :prompt=>"Select Role", :onChange=>"javascript: checkOption(this.id,true,'role');"%>
 	<% end %>
 <% else %>
 	<% if !@fieldName.nil? and @fieldName == "creatorURI"%>
