--- a/app/views/mads_authority/edit.html.erb
+++ b/app/views/mads_authority/edit.html.erb
@@ -2,8 +2,12 @@
 <%= form_for @mads_authority do |f| %>
   <%= label_tag 'mads_authority[code]', "Code" %><%= text_field_tag 'mads_authority[code][]', @mads_authority.code[0] %>
   <%= label_tag 'mads_authority[name]', "Name" %><%= text_field_tag 'mads_authority[name][]', @mads_authority.name[0] %>
-  <%= label_tag 'mads_authority[scheme]', "Scheme" %>
-  <%= select_tag 'mads_authority[scheme]', options_for_select(MadsScheme.all.collect{ |s| [s.name.first, s.pid] }, :selected => @scheme_id ) %>
+  <%#= label_tag 'mads_authority[scheme]', "Scheme" %>
+  <%#= select_tag 'mads_authority[scheme]', options_for_select(MadsScheme.all.collect{ |s| [s.name.first, s.pid] }, :selected => @scheme_id ) %>
+  <%= f.fields_for :scheme, include_id: false do |se| %>
+    <%= se.label :id, "Scheme" %>
+    <%= se.select :id, options_for_select(@mads_schemes , :selected => @scheme_id) , :prompt=>"Select MadsScheme" %>
+  <% end %>
   <br>
   <%=f.submit "Save", class: "btn btn-primary" %>
   <%= link_to "Cancel", @mads_authority, class: "btn btn-primary" %>
