--- a/app/views/mads_authority/new.html.erb
+++ b/app/views/mads_authority/new.html.erb
@@ -1,8 +1,11 @@
 <h1>Create a new MADS Authority</h1>
 <%= form_for @mads_authority do |f| %>
-  <%= label_tag 'mads_authority[code]', "Code" %><%= text_field_tag 'mads_authority[code]' %>
-  <%= label_tag 'mads_authority[name]', "Name" %><%= text_field_tag 'mads_authority[name]' %>
-  <%= label_tag 'mads_authority[scheme]', "MADS Scheme" %><%= f.select(:scheme, options_from_collection_for_select(@mads_schemes, :id, :name) , :prompt => 'Select Scheme') %>
+  <%= label_tag 'mads_authority[code]', "Code" %><%= text_field_tag 'mads_authority[code]', "", required: true %>
+  <%= label_tag 'mads_authority[name]', "Name" %><%= text_field_tag 'mads_authority[name]', "", required: true %>
+  <%#= label_tag 'mads_authority[scheme]', "MADS Scheme" %><%#= f.select(:scheme, options_from_collection_for_select(@mads_schemes, :id, :name), {:include_blank => 'Select MadsScheme'}, :required => "true")%>
   <br>
+  <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
+  <br>
+  <%= render :partial => 'shared/edit_fields/new_form_hidden_fields' , :locals => {:parent_id => params[:parent_id], :parent_class => params[:parent_class]}%>
   <%=f.submit "Save", class: "btn btn-primary" %>
 <%end%>
