Adding 'The Library' button to top navigation (DHH-268)

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -52,6 +52,9 @@
               <%= link_to 'Sign In', new_user_session_path %>
             </li>
           <% end %>
+          <li>
+            <%= link_to 'The Library', 'http://libraries.ucsd.edu/' %>
+          </li>
         </ul>
       </nav>
     </div>
