--- a/app/views/layouts/_googleanalytics.html.erb
+++ b/app/views/layouts/_googleanalytics.html.erb
@@ -3,6 +3,7 @@
   _gaq.push(['_setAccount', 'UA-3409104-8']);
   _gaq.push (['_gat._anonymizeIp']);
   _gaq.push(['_trackPageview']);
+  _gaq.push(['_setDomainName',window.location.hostname]);
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
