--- a/app/views/mads_languages/show.html.erb
+++ b/app/views/mads_languages/show.html.erb
@@ -1,10 +1,10 @@
 <% @page_title =  "Language | #{render_document_show_field_value(:document=>@document, :field=>"name_tesim")} " %>
 <% language = render_document_show_field_value(:document=>@document, :field=>"name_tesim") %>
+<% record_id = render_document_show_field_value(:document=>@document, :field=>"id_t") %>
 
 <div class="row-fluid">
 
   <div id="content" class="show-document span9">
-
 		<div class="row-fluid">
 			<section class="dams-metadata span12">
 				<p class="sidebar-header"><strong><%= language %></strong></p>			
@@ -13,9 +13,11 @@
 				</dl>	
 			</section>
 		</div>
+  	    <%= render :partial => 'shared/edit_fields/show_form_hidden_fields' , :locals => {:record_id => record_id, :name => language, :parent_id => params[:parent_id], :parent_class => params[:parent_class]}%>  
 
 	 </div>    
-	
+
+<% if(params[:parent_id].nil? and params[:parent_class].nil?) %>	
 	<div class="span3">
 	
 		<div class="well dams-search-box">
@@ -38,7 +40,7 @@
     <% end %>
 				
 	</div>
-
+<% end %>
 </div>
 
 
