--- a/app/views/mads_complex_subjects/show.html.erb
+++ b/app/views/mads_complex_subjects/show.html.erb
@@ -1,5 +1,6 @@
 <% @page_title =  "Subject | #{render_document_show_field_value(:document=>@document, :field=>"name_tesim")} " %>
 <% subject = render_document_show_field_value(:document=>@document, :field=>"name_tesim") %>
+<% record_id = render_document_show_field_value(:document=>@document, :field=>"id_t") %>
 
 <div class="row-fluid">
 
@@ -13,9 +14,11 @@
 				</dl>	
 			</section>
 		</div>
+  	    <%= render :partial => 'shared/edit_fields/show_form_hidden_fields' , :locals => {:record_id => record_id, :name => subject, :parent_id => params[:parent_id], :parent_class => params[:parent_class]}%>  
 
 	 </div>    
-	
+
+<% if(params[:parent_id].nil? and params[:parent_class].nil?) %>	
 	<div class="span3">
 	
 		<div class="well dams-search-box">
@@ -38,7 +41,7 @@
     <% end %>
 				
 	</div>
-
+<% end %>
 </div>
 
 
