Renaming 'Creator' on edit forms to 'Subject Names', and separating other name from relationship name in solr index (DHH-292)

--- a/app/views/shared/edit_fields/_creator_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_creator_edit_form.html.erb
@@ -1,4 +1,4 @@
-<h3>Creator</h3>
+<h3>Subject Names</h3>
 <%
   nameTypeArray = [["ConferenceName", "ConferenceName"],["CorporateName", "CorporateName"],["FamilyName", "FamilyName"],["Name", "Name"], ["PersonalName", "PersonalName"]]
 %>
@@ -14,4 +14,4 @@
   end 
 %>
 
-<p><%= link_to_add_edit_creators "Add Creator", f, "#{object_type}", nameTypeArray, "#{i}"%></p>
+<p><%= link_to_add_edit_creators "Add Name", f, "#{object_type}", nameTypeArray, "#{i}"%></p>
