--- a/app/views/dams_objects/_object_viewer.html.erb
+++ b/app/views/dams_objects/_object_viewer.html.erb
@@ -18,17 +18,29 @@
 					display_file_path = (display_file != 'no_display') ? file_path(ark,"_#{display_file}") : ''
 					service_file_path = (service_file != nil) ? file_path(ark,"_#{service_file}") : ''
 					zoom_file_path = zoom_path @document['id'], '0'
+					culturallySensitiveText = grabCulturallySensitiveText(@document["note_json_tesim"])
 				%>
 
-				<%= render :partial => 'simple_object_viewer',
-				           :locals => {
-						           :fileType => fileType,
-						           :display_file_path => display_file_path,
-						           :service_file_path => service_file_path,
-						           :service_file => service_file,
-						           :zoom_file_path => zoom_file_path
-				           }
-				%>
+				<% if !culturallySensitiveText.nil? %>
+					<%= render :partial => 'culturally_sensitive_viewer',
+					           :locals => {
+							           :culturallySensitiveText => culturallySensitiveText,
+							           :displayFilePath => display_file_path, 
+							           :zoomFilePath  => zoom_file_path, 
+							           :filePath => service_file_path
+					           }
+					%>
+				<% else %>
+					<%= render :partial => 'simple_object_viewer',
+					           :locals => {
+							           :fileType => fileType,
+							           :display_file_path => display_file_path,
+							           :service_file_path => service_file_path,
+							           :service_file => service_file,
+							           :zoom_file_path => zoom_file_path
+					           }
+					%>
+				<% end %>
 
 			<% end %>
 		<% end %>
