--- a/app/views/dams_assembled_collections/edit.html.erb
+++ b/app/views/dams_assembled_collections/edit.html.erb
@@ -12,6 +12,8 @@
   <%= render :partial => 'shared/edit_fields/resourceType_form', :locals => {:object => @dams_assembled_collection, :object_type => "dams_assembled_collection"}%>
 
   <%= render :partial => 'shared/edit_fields/date_edit_form', :locals => {:object => @dams_assembled_collection, :object_type => "dams_assembled_collection", :f => f}%>      
+
+  <%= render :partial => 'shared/edit_fields/unit_edit_form' , :locals => {:object => @dams_assembled_collection, :object_type => "dams_assembled_collection"}%>
   
   <%= render :partial => 'shared/edit_fields/language_edit_form' , :locals => {:object => @dams_assembled_collection, :object_type => "dams_assembled_collection", :f => f}%>
     
