--- a/app/views/dams_provenance_collection_parts/edit.html.erb
+++ b/app/views/dams_provenance_collection_parts/edit.html.erb
@@ -14,7 +14,9 @@
   <%= render :partial => 'shared/edit_fields/provenanceCollection_edit_form', :locals => {:object => @dams_object, :object_type => "dams_provenance_collection_part"}%> 
   
 <%= render :partial => 'shared/edit_fields/date_edit_form', :locals => {:object => @dams_provenance_collection_part, :object_type => "dams_provenance_collection_part", :f => f}%>      
-  
+
+  <%= render :partial => 'shared/edit_fields/unit_edit_form' , :locals => {:object => @dams_provenance_collection_part, :object_type => "dams_provenance_collection_part"}%>
+    
   <%= render :partial => 'shared/edit_fields/language_edit_form' , :locals => {:object => @dams_provenance_collection_part, :object_type => "dams_provenance_collection_part", :f => f}%>
     
   <%= render :partial => 'shared/edit_fields/notes_edit_form' , :locals => {:object => @dams_provenance_collection_part, :object_type => "dams_provenance_collection_part", :type => "note", :f => f}%>
