--- a/app/views/dams_provenance_collection_parts/new.html.erb
+++ b/app/views/dams_provenance_collection_parts/new.html.erb
@@ -22,6 +22,8 @@ $(document).ready(function() {
 
 <%= render :partial => 'shared/edit_fields/date_form' , :locals => {:f => f, :object_type => "dams_provenance_collection_part"}%>
 
+  <%= render :partial => 'shared/edit_fields/unit_form' , :locals => {:f => f, :object_type => "dams_provenance_collection_part"}%>
+  
   <%= render :partial => 'shared/edit_fields/notes_form' , :locals => {:f => f, :object_type => "dams_provenance_collection_part"}%>
 
   <%= render :partial => 'shared/edit_fields/language_form' , :locals => {:f => f, :object_type => "dams_provenance_collection_part", :is_first => "true"}%>
