--- a/app/assets/stylesheets/custom-object-viewer.css.scss
+++ b/app/assets/stylesheets/custom-object-viewer.css.scss
@@ -99,6 +99,8 @@ $complexFile: #AC6F2B !default;
 	.label:hover{background-color: $complexFile;}
 }
 
+.culturally-sensitive-thumbnail {border:2px solid #659EC7; width:100px; height:150px;}
+#sensitive-object {background: none repeat scroll 0 0 #FFFAEE; display: inline-block;font-size: 12px;height: 390px;padding: 15px;width: 390px;vertical-align: middle;padding-top: 50px}
 
 // Sidebar
 .sidebar-header{border-bottom:1px solid #ddd;padding-bottom:5px;margin:10px 0}
