--- a/app/views/layouts/_head_common.html.erb
+++ b/app/views/layouts/_head_common.html.erb
@@ -1,5 +1,13 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
+<meta content="7MiYjX2ZghMOWvtKRWlar--c6mD2ose5EcbQFQ6szFA" name="google-site-verification"/>
+<meta content="University of California, San Diego" name="ORGANIZATION"/>
+<meta content="index,follow,noarchive" name="robots"/>
+<meta content="DC" name="SITE"/>
+<meta content="<%= full_title(@page_title) %>" name="PAGETITLE"/>
+<% if !@document.nil? and @document.class != Array and !@document["note_tesim"].nil?%>
+	<meta content="<%#= @document["note_tesim"][0]%>" name="DESCRIPTION"/> 
+<% end %>
 <title><%= full_title(@page_title) %></title>
 
 <%# LE JAVASCRIPT  %>
