Adding description to SEO metadata. DHH-275

--- a/app/views/layouts/_head_common.html.erb
+++ b/app/views/layouts/_head_common.html.erb
@@ -5,9 +5,22 @@
 <meta content="index,follow,noarchive" name="robots"/>
 <meta content="DC" name="SITE"/>
 <meta content="<%= full_title(@page_title) %>" name="PAGETITLE"/>
-<% if !@document.nil? and @document.class != Array and !@document["note_tesim"].nil?%>
-	<meta content="<%#= @document["note_tesim"][0]%>" name="DESCRIPTION"/> 
-<% end %>
+<% if !@document.nil? and @document.class != Array
+  data = @document["note_json_tesim"]
+  if data != nil
+    data.each do |n|
+      note = JSON.parse(n)
+      note_type = note['type']
+
+      # add notes if type/label match specification
+      if ( !note_type.nil? && note_type.include?("description"))
+%>
+        <meta content="<%= note['value']%>" name="DESCRIPTION"/> 
+<%
+      end
+    end
+  end 
+end%>
 <title><%= full_title(@page_title) %></title>
 
 <%# LE JAVASCRIPT  %>
