--- a/app/views/shared/fields/_show_raw.erb
+++ b/app/views/shared/fields/_show_raw.erb
@@ -25,24 +25,18 @@
 <%= render :partial => 'shared/fields/note', :locals => {:type => 'physical description'} %>
 <%= render :partial => 'shared/fields/note', :locals => {:type => 'dimensions'} %>
 
-<%= render :partial => 'shared/fields/conference_name' %>
-<%= render :partial => 'shared/fields/corporate_name' %>
-<%= render :partial => 'shared/fields/family_name' %>
-<%= render :partial => 'shared/fields/personal_name' %>
-<%= render :partial => 'shared/fields/name' %>
+<!-- subjects bundle: names, topic, genreForm and geographic -->
 <%= render :partial => 'shared/fields/subject' %>
+
 <%= render :partial => 'shared/fields/built_work_place' %>
 <%= render :partial => 'shared/fields/cultural_context' %>
 <%= render :partial => 'shared/fields/function' %>
-<%= render :partial => 'shared/fields/genre_form' %>
-<%= render :partial => 'shared/fields/geographic' %>
 <%= render :partial => 'shared/fields/iconography' %>
 <%= render :partial => 'shared/fields/occupation' %>
 <%= render :partial => 'shared/fields/scientific_name' %>
 <%= render :partial => 'shared/fields/style_period' %>
 <%= render :partial => 'shared/fields/technique' %>
 <%= render :partial => 'shared/fields/temporal' %>
-<%= render :partial => 'shared/fields/topic' %>
 
 <%= render :partial => 'shared/fields/collection' %>
 <%= render :partial => 'shared/fields/related_resource' %>
