--- a/app/views/dams_units/index.html.erb
+++ b/app/views/dams_units/index.html.erb
@@ -1,5 +1,6 @@
 <section id="home-01">
   <%=image_tag '/assets/home-page/logo-dc.png', :alt => 'Digital Collections', :id => 'dc-logo' %>
+	<p class="tagline">Currently totaling 98,345 images, documents, data sets, audio recordings, and videos</p>
   <%= form_tag catalog_index_url, :method => :get, :class => '', :id => 'dc-search-box' do %>
 		<fieldset>
 	    <input type="text" placeholder="Search..." name="q" id="q">
