Refactored parts of dynamic form control. Removed ARK URLs from metadata display. DHH-295

--- a/app/views/shared/edit_fields/_creator_fields.html.erb
+++ b/app/views/shared/edit_fields/_creator_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="fields">
 <br/>
-<%= select_tag "#{object_type}[nameType][]",  options_for_select(nameTypeArray) , :prompt=>"Select Name" , :onChange=>"javascript: getCreators(this,'#{object_type}','#newClassNameC','0');"%>
+<%= select_tag "#{object_type}[nameType][]",  options_for_select(typeArray) , :prompt=>"Select Name" , :onChange=>"javascript: getCreators(this,'#{object_type}','#newCreator','0');"%>
 
-<div id="newClassNameC"></div>
+<div id="newCreator"></div>
 </div>
