--- a/app/views/shared/edit_fields/_creator_edit_fields.html.erb
+++ b/app/views/shared/edit_fields/_creator_edit_fields.html.erb
@@ -1,13 +1,13 @@
 <div class="fields">
 <br/>
 <% if selected_type.nil?%>
-	<%= select_tag "#{object_type}[nameType][]",  options_for_select(nameTypeArray) , :prompt=>"Select Name Type" , :onChange=>"javascript: getEditCreators(this,'#{object_type}','#newClassNameC');"%>
-	<div id="newClassNameC"></div>
+	<%= select_tag "#{object_type}[nameType][]",  options_for_select(typeArray) , :prompt=>"Select Name Type" , :onChange=>"javascript: getEditCreators(this,'#{object_type}','#newCreator');"%>
+	<div id="newCreator"></div>
 <% else %>
 	<%= hidden_field_tag "#{object_type}[nameType][]", "#{selected_type}" %>
 	<script type="text/javascript">
-	   getCreators("<%= selected_type %>","<%= object_type %>","#newClassNameC<%= index %>","0","<%= selected_value %>");
+	   getCreators("<%= selected_type %>","<%= object_type %>","#newCreator<%= index %>","0","<%= selected_value %>");
 	</script>
-	<div id="newClassNameC<%= index %>"></div>
+	<div id="newCreator<%= index %>"></div>
 	</div>	
 <% end %>
