--- a/app/views/shared/edit_fields/_creator_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_creator_edit_form.html.erb
@@ -1,6 +1,6 @@
 <h3>Subject Names</h3>
 <%
-  nameTypeArray = [["ConferenceName", "ConferenceName"],["CorporateName", "CorporateName"],["FamilyName", "FamilyName"],["Name", "Name"], ["PersonalName", "PersonalName"]]
+  typeArray = [["ConferenceName", "ConferenceName"],["CorporateName", "CorporateName"],["FamilyName", "FamilyName"],["Name", "Name"], ["PersonalName", "PersonalName"]]
 %>
 
 <% 
@@ -8,10 +8,10 @@
   @creators.each do |creat|
 	tmp = JSON.parse(creat.to_json)
 %>
-	<%= render :partial => 'shared/edit_fields/creator_edit_fields' , :locals => {:f => f, :object_type => object_type, :nameTypeArray => nameTypeArray, :selected_type => "#{tmp['name']}", :index => "#{i}", :selected_value => "#{tmp['value']}"}%>       
+	<%= render :partial => 'shared/edit_fields/creator_edit_fields' , :locals => {:f => f, :object_type => object_type, :typeArray => typeArray, :selected_type => "#{tmp['name']}", :index => "#{i}", :selected_value => "#{tmp['value']}"}%>       
 <% 
 	i = i+1
   end 
 %>
 
-<p><%= link_to_add_edit_creators "Add Name", f, "#{object_type}", nameTypeArray, "#{i}"%></p>
+<p><%= link_to_add_dynamic_fields "Add Name", f, "#{object_type}", typeArray, "creator", "#{i}", 1%></p>
