--- a/app/views/shared/edit_fields/_simple_subjects_form.html.erb
+++ b/app/views/shared/edit_fields/_simple_subjects_form.html.erb
@@ -1,8 +1,8 @@
 <h3>Simple Subject</h3>
 <%
-   subjectTypeArray = [["BuiltWorkPlace", "BuiltWorkPlace"],["CulturalContext", "CulturalContext"],["Function", "Function"],["GenreForm", "GenreForm"],["Geographic", "Geographic"],["Iconography", "Iconography"],["Occupation", "Occupation"],["ScientificName", "ScientificName"],["StylePeriod", "StylePeriod"],["Technique", "Technique"],["Temporal", "Temporal"],["Topic", "Topic"]]
+   typeArray = [["BuiltWorkPlace", "BuiltWorkPlace"],["CulturalContext", "CulturalContext"],["Function", "Function"],["GenreForm", "GenreForm"],["Geographic", "Geographic"],["Iconography", "Iconography"],["Occupation", "Occupation"],["ScientificName", "ScientificName"],["StylePeriod", "StylePeriod"],["Technique", "Technique"],["Temporal", "Temporal"],["Topic", "Topic"]]
 %>
 
-<%= render :partial => 'shared/edit_fields/simple_subjects_fields' , :locals => {:f => f, :object_type => object_type, :subjectTypeArray => subjectTypeArray}%>
+<%= render :partial => 'shared/edit_fields/simple_subjects_fields' , :locals => {:f => f, :object_type => object_type, :typeArray => typeArray}%>
     
-<p><%= link_to_add_subjects "Add Simple Subject", f, "#{object_type}", subjectTypeArray%></p>
+<p><%= link_to_add_dynamic_fields "Add Simple Subject", f, "#{object_type}", typeArray, "simple_subjects", 0, 0%></p>
