--- a/app/views/shared/fields/_note.html.erb
+++ b/app/views/shared/fields/_note.html.erb
@@ -37,24 +37,27 @@
   if notes.count > 0
     if type == nil
       notes.each do |note| 
-        htmlOpen = htmlOpenTemp
-        if note['displayLabel'] != nil && !note['displayLabel'].blank?
-          htmlOpen %= note['displayLabel'].gsub(/(?<=[A-Za-z])(?=[A-Z])/, ' ').split.map(&:capitalize).join(' ')
-        elsif note['type'] != nil && !note['type'].blank?
-          htmlOpen %= note['type'].gsub(/(?<=[A-Za-z])(?=[A-Z])/, ' ').split.map(&:capitalize).join(' ')
-        else
-          htmlOpen %= 'General Note'
-        end
-        concat htmlOpen.html_safe %>
-        <p><%= auto_link(note['value'])%></p>
-<%    end
+        if (!note['value'].include? "http://library.ucsd.edu/ark:") #&& note['type'].casecmp("identifier") != 0 #Hide ARK URL from display
+          htmlOpen = htmlOpenTemp
+          if note['displayLabel'] != nil && !note['displayLabel'].blank?
+            htmlOpen %= note['displayLabel'].gsub(/(?<=[A-Za-z])(?=[A-Z])/, ' ').split.map(&:capitalize).join(' ')
+          elsif note['type'] != nil && !note['type'].blank?
+            htmlOpen %= note['type'].gsub(/(?<=[A-Za-z])(?=[A-Z])/, ' ').split.map(&:capitalize).join(' ')
+          else
+            htmlOpen %= 'General Note'
+          end
+          concat htmlOpen.html_safe %>
+          <p><%= auto_link(note['value'])%></p>
+<%      end
+      end
     else
       notes.each do |note|
-        htmlOpen = htmlOpenTemp
-        htmlOpen %= type.to_s.capitalize
-        concat htmlOpen.html_safe %>
-        <p><%= auto_link(note['value'])%></p>
-<%
+        if (!note['value'].include? "http://library.ucsd.edu/ark:") #&& note['type'].casecmp("identifier") != 0 #Hide ARK URL from display
+          htmlOpen = htmlOpenTemp
+          htmlOpen %= type.to_s.capitalize
+          concat htmlOpen.html_safe %>
+          <p><%= auto_link(note['value'])%></p>
+<%      end
       end
     end
     concat htmlClose.html_safe
