--- a/app/views/shared/edit_fields/_relationship_fields.html.erb
+++ b/app/views/shared/edit_fields/_relationship_fields.html.erb
@@ -5,7 +5,7 @@
 	  <%# end %>
   <%# end %>  
   <br/>
-<%= select_tag "#{object_type}[relationshipNameType][]",  options_for_select(typeArray) , :prompt=>"Select Name Type" , :onChange=>"javascript: getNames(this,'#{object_type}','#newRelationship','0',null,'true',null);"%>
+<%= select_tag "#{object_type}[relationshipNameType][]",  options_for_select(typeArray) , :prompt=>"Select Name Type" , :onChange=>"javascript: getSimpleSubjects(this,'#{object_type}','#newRelationship','0','relationshipName',null,'true',null);"%>
 
 <div id="newRelationship"></div>
 
