--- a/app/views/shared/edit_fields/_creator_edit_fields.html.erb
+++ b/app/views/shared/edit_fields/_creator_edit_fields.html.erb
@@ -1,12 +1,12 @@
 <div class="fields">
 <br/>
 <% if selected_type.nil?%>
-	<%= select_tag "#{object_type}[nameType][]",  options_for_select(typeArray) , :prompt=>"Select Name Type" , :onChange=>"javascript: getEditCreators(this,'#{object_type}','#newCreator');"%>
+	<%= select_tag "#{object_type}[nameType][]",  options_for_select(typeArray) , :prompt=>"Select Name Type" , :onChange=>"javascript: getSimpleEditSubjects(this,'#{object_type}','#newCreator','creator');"%>
 	<div id="newCreator"></div>
 <% else %>
 	<%= hidden_field_tag "#{object_type}[nameType][]", "#{selected_type}" %>
 	<script type="text/javascript">
-	   getCreators("<%= selected_type %>","<%= object_type %>","#newCreator<%= index %>","0","<%= selected_value %>");
+	   getSimpleSubjects("<%= selected_type %>","<%= object_type %>","#newCreator<%= index %>","0","creator","<%= selected_value %>");
 	</script>
 	<div id="newCreator<%= index %>"></div>
 	</div>	
