--- a/app/views/shared/edit_fields/_relationship_edit_fields.html.erb
+++ b/app/views/shared/edit_fields/_relationship_edit_fields.html.erb
@@ -1,12 +1,12 @@
 <div class="fields">
 <br/>
 <% if selected_type.nil?%>
-	<%= select_tag "#{object_type}[relationshipNameType][]",  options_for_select(typeArray) , :prompt=>"Select Name Type" , :onChange=>"javascript: getSimpleEditSubjects(this,'#{object_type}','#newRelationship','relationshipName');"%>
+	<%= select_tag "#{object_type}[relationshipNameType][]",  options_for_select(typeArray) , :prompt=>"Select Name Type" , :onChange=>"javascript: getEditDynamicFields(this,'#{object_type}','#newRelationship','relationshipName');"%>
 	<div id="newRelationship"></div>
 <% else %>
 	<%= hidden_field_tag "#{object_type}[relationshipNameType][]", "#{selected_type}" %>
 	<script type="text/javascript">
-	   getSimpleSubjects("<%= selected_type %>","<%= object_type %>","#newRelationship<%= index %>","0","relationshipName","<%= selected_name %>","true","<%= selected_role %>");
+	   getDynamicFields("<%= selected_type %>","<%= object_type %>","#newRelationship<%= index %>","0","relationshipName","<%= selected_name %>","true","<%= selected_role %>");
 	</script>
 	<div id="newRelationship<%= index %>"></div>
 	</div>	
