--- a/app/views/shared/fields/_preferred_citation_note.html.erb
+++ b/app/views/shared/fields/_preferred_citation_note.html.erb
@@ -19,7 +19,7 @@
 	 		preferredCitationNote = JSON.parse(datum)
 	 		if !preferredCitationNote['value'].blank?		
 %>
-				<p><%= auto_link(preferredCitationNote['value']) %></p>
+				<p><%= auto_link(preferredCitationNote['value'].gsub('""', '"')) %></p>
 <%
 			end
 		end
