Added Search Tips and Take Down Policy pages. Added header tab for Take Down Policy. Updated FAQ and About pages. DHH-297

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,6 +32,7 @@
           <li><%= link_to 'About', about_path %></li>
           <li><%= link_to 'FAQ', faq_path %></li>
           <li><a href="#contact">Contact</a></li>
+          <li><%= link_to 'Take Down Policy', takedown_path %></li>
 
           <% if current_user  %>
             <li class="dropdown">
