--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,18 @@
 <h1>About</h1>
 <div>
 <p>
-The UC San Diego Library Digital Collections website provides easy one stop searching to our digital collections from the Arts Library, Mandeville Special Collections and the Scripps Institution of Oceanography. The Digital Collections only represent a fraction of the materials available in the UC San Diego Library. Access to more content will increase overtime as we digitize more of our collections.
+The UC San Diego Library Digital Collections website is a public search and discovery interface that currently features more than 50,000 digital objects, including documents, photographs, audio, video, and data sets, which reflect a range of materials collected, managed, and preserved by the Library to support teaching, learning and research.  Content has been drawn from across the Library's collections with strengths in the areas of Baja California, Melanesia, Oceanography, and UC San Diego history.  The Digital Collections website represents only a fraction of the materials available in the UC San Diego Library.  Access to more content will increase over time.
 </p>
+<p>For more information about the UC San Diego Library Digital Collections, see:
+	<ul>
+		<li><%= link_to 'Frequently Asked Questions', faq_path %></li>
+		<li><%= link_to 'Take Down Policy', takedown_path %></li>
+		<li><%= link_to 'Search Tips', search_tips_path %></li>
+	</ul>
+<p>Additional Resources:
+	<ul>
+		<li><a href="http://escholarship.org/" class="external-link" rel="nofollow">e-Scholarship</a></li>
+		<li><a href="http://www.artstor.org" class="external-link" rel="nofollow">ARTstor</a></li>
+		<li><a href="http://www.calisphere.universityofcalifornia.edu/" class="external-link" rel="nofollow">Calisphere</a></li>
+
 </div>
