Added dropdown menu for Help section in header. DHH-297

--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -55,7 +55,7 @@
 <h4 id="7">What is the best way to search the Digital Collections?</h4>
 
 <p>There are many ways to search for content in Digital Collections. You can use the search box to search across all of the collections. You can also browse by collection and search within a specific collection. Or, browse content by topic or format.  You can also limit your search further according to format, topic, or collection on the search results page.
-<p>For additional information on searching, see <%= link_to 'Search Tips', search_tips_path %>.  -->
+<p>For additional information on searching, see <%= link_to 'Search Tips', search_tips_path %>.
 <hr>
 
 <h4 id="8">I see the item I'm interested in online, but for my research I need to see the physical object. How can I find out more about it?</h4>
@@ -84,3 +84,4 @@
 
 <p>We appreciate the help in updating or correction information about our digital resources.  To report a correction or provide additional information, please use the Contact link found at the top of every page. Our staff will respond to questions or comments in a timely manner. 
 <p>You can also provide a comment with the item at the bottom of the item page.
+</div>
