--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,15 @@
           <li><%= link_to 'About', about_path %></li>
           <li><%= link_to 'FAQ', faq_path %></li>
           <li><a href="#contact">Contact</a></li>
-          <li><%= link_to 'Take Down Policy', takedown_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'About', about_path %></li>
+              <li><%= link_to 'Contact', contact_path %></li>
+              <li><%= link_to 'FAQ', faq_path %></li>
+              <li><%= link_to 'Take Down Policy', takedown_path %></li>
+            </ul>
+          </li>
 
           <% if current_user  %>
             <li class="dropdown">
