Updated static pages, contact links, header, and footer. DHH-297

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,7 +10,7 @@
 		<ul class="inline">
 			<li><a href="#terms">Terms &amp; Conditions</a></li>
 			<li class="muted">|</li>
-			<li><a href="#feedback">Feedback</a></li>
+			<li><a href="mailto:dlp@ucsd.edu">Feedback</a></li>
 		</ul>
 	</section>
 </footer>
