--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,19 +29,6 @@
             </ul>
           </li>
 
-          <li><%= link_to 'About', about_path %></li>
-          <li><%= link_to 'FAQ', faq_path %></li>
-          <li><a href="#contact">Contact</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to 'About', about_path %></li>
-              <li><%= link_to 'Contact', contact_path %></li>
-              <li><%= link_to 'FAQ', faq_path %></li>
-              <li><%= link_to 'Take Down Policy', takedown_path %></li>
-            </ul>
-          </li>
-
           <% if current_user  %>
             <li class="dropdown">
               <!-- Logged in as <%= current_user.uid %> -->
@@ -65,6 +52,15 @@
           <% end %>
           <li>
             <%= link_to 'The Library', 'http://libraries.ucsd.edu/' %>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'About', about_path %></li>
+              <li><a href="mailto:dlp@ucsd.edu">Contact</a></li>
+              <li><%= link_to 'FAQ', faq_path %></li>
+              <li><%= link_to 'Take Down Policy', takedown_path %></li>
+            </ul>
           </li>
         </ul>
       </nav>
