--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,22 @@
-<h1>About</h1>
+<h1>About Digital Collections Beta</h1>
 <div>
 <p>
-The UC San Diego Library Digital Collections website is a public search and discovery interface that currently features more than 50,000 digital objects, including documents, photographs, audio, video, and data sets, which reflect a range of materials collected, managed, and preserved by the Library to support teaching, learning and research.  Content has been drawn from across the Library's collections with strengths in the areas of Baja California, Melanesia, Oceanography, and UC San Diego history.  The Digital Collections website represents only a fraction of the materials available in the UC San Diego Library.  Access to more content will increase over time.
+The UC San Diego Library Digital Collections website is a public beta search and discovery interface that currently features more than 50,000 digital objects, including documents, photographs, audio, video, and data sets, which reflect a range of materials collected, managed, and preserved by the Library to support teaching, learning and research.  Content has been drawn from across the Library's collections with strengths in the areas of Baja California, Melanesia, Oceanography, and UC San Diego history.  The Digital Collections website represents only a fraction of the materials available in the UC San Diego Library.  Access to more content will increase over time. 
 </p>
+<br>
+<p>Items have been digitized from the original primary sources in our collections, and recently the Library began to partner with researchers on campus to make research data more readily available. The Digital Collections website gathers these two categories of content managed by the UC San Diego Library:
+</p>
+<ul>
+	<li>Library Digital Collections contains digitized versions of selected collections covering topics such as art, film, music, history and anthropology.  More information on the Library and the Digital Library Development Program can be found here:</li>
+	<ul>
+		<li><a href="http://libraries.ucsd.edu/" class="external-link" rel="nofollow">http://libraries.ucsd.edu/</a></li>
+		<li><a href="http://libraries.ucsd.edu/about/digital-library/" class="external-link" rel="nofollow">http://libraries.ucsd.edu/about/digital-library/</a></li>
+	</ul>
+	<li>Research Cyberinfrastructure is comprised of research data gathered by campus researchers as part of a campus-wide Research Cyberinfrastructure initiative.  More information can be found here:</li>
+	<ul>
+		<li><a href="http://rci.ucsd.edu/" class="external-link" rel="nofollow">http://rci.ucsd.edu/</a></li>
+	</ul>
+</ul>
 <p>For more information about the UC San Diego Library Digital Collections, see:
 	<ul>
 		<li><%= link_to 'Frequently Asked Questions', faq_path %></li>
@@ -14,5 +28,5 @@ The UC San Diego Library Digital Collections website is a public search and disc
 		<li><a href="http://escholarship.org/" class="external-link" rel="nofollow">e-Scholarship</a></li>
 		<li><a href="http://www.artstor.org" class="external-link" rel="nofollow">ARTstor</a></li>
 		<li><a href="http://www.calisphere.universityofcalifornia.edu/" class="external-link" rel="nofollow">Calisphere</a></li>
-
+	</ul>
 </div>
